--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,12 +1,11 @@
 <mat-toolbar class="header mat-elevation-z4">
   <span>
-    <a routerLink="/">
-      <img class="logo" src="assets/logo.png" alt="Logo" /> </a
+    <a routerLink="/"> <img class="logo" src="assets/logo.png" alt="Logo" /> </a
   ></span>
   <span class="title-group">
-    <a>
-      <i class="material-icons">home</i>
-      Inicio
+    <a routerLink="{{ routeUrl }}">
+      <i class="material-icons">{{ icon }}</i>
+      {{ title }}
     </a>
   </span>
 </mat-toolbar>
