--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,12 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-.red{
-    color: rgb(227, 94, 107);
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.v-middle{
+.red {
+    color: #e35e6b;
+}
+
+.v-middle {
     vertical-align: middle;
+}
+
+.msg-success {
+    background: #28a745;
+    color: #fff;
+}
+.msg-error {
+    background: #e35e6b;
+    color: #fff;
 }
